[package]
name = "riot-module-slipmux"
version = "0.1.0"
edition = "2021"

authors = ["Bennet Hattesten <bennet.blischke@haw-hamburg.de"]
license = "LGPL-2.1-only"

# Shipped with RIOT-OS; this has no external API that would make
# sense to consume in any context than from within RIOT
publish = false

[dependencies]
riot-wrappers = { version = "*", features = ["with_msg_v2"] }
static_cell = "2.1.0"
switch-hal = "*"
